--- a/index.html
+++ b/index.html
@@ -80,5 +80,139 @@
                         <textarea name="description" id="description" placeholder="Escreva sobre os detalhes do evento"></textarea>
                     </div>
                 </fieldset>
+                
+                <fieldset class="personalizacao">
+                    <legend>Personalização</legend>
+                    <div class="field-wrapper">
+                        <label>Cor principal</label>
+                        <div class="color-options">
+                            <div class="color-dot" style="background-color: #59B2FF;"></div>
+                            <div class="color-dot" style="background-color: #6A59FF;"></div>
+                            <div class="color-dot" style="background-color: #B259FF"></div>
+                            <div class="color-dot" style="background-color: #FF59F9;"></div>
+                            <div class="color-dot" style="background-color: #FF598B;"></div>
+                            <div class="color-dot" style="background-color: #FF5959;"></div>
+                            <div class="color-dot" style="background-color: #FF8B59;"></div>
+                            <div class="color-dot" style="background-color: #FFCD59;"></div>
+                            <div class="color-dot" style="background-color: #E1FF59;"></div>
+                            <div class="color-dot" style="background-color: #59FF91;"></div>
+                            <div class="color-dot" style="background-color: #59FFF9;"></div> 
+                        </div>
+                    </div>
+
+                    <div class="field-wrapper">
+                        <label>Tema do evento</label>
+                        <div class="theme-grid">
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image.svg" alt="Aniversário">
+                                    <p>Aniversário</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                 <article class="card">
+                                    <img src="assets/Image-1.svg" alt="Infantil">
+                                    <p>Infantil</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-2.svg" alt="Formatura">
+                                    <p>Formatura</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-3.svg" alt="Casamento">
+                                    <p>Casamento</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-4.svg" alt="Chá de bebê">
+                                    <p>Chá de bebê</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-5.svg" alt="Chá de panela">
+                                    <p>Chá de panela</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-6.svg" alt="Carnaval">
+                                    <p>Carnaval</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-7.svg" alt="Páscoa">
+                                    <p>Páscoa</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-8.svg" alt="São João">
+                                    <p>São João</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-9.svg" alt="Halloween">
+                                    <p>Halloween</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-10.svg" alt="Natal">
+                                    <p>Natal</p>
+                                </article>
+                            </div>
+
+                            <div class="theme-option">
+                                <article class="card">
+                                    <img src="assets/Image-11.svg" alt="Outro">
+                                    <p>Outro</p>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="style-fields">
+                        <div class="field-wrapper">
+                            <label>Estilo</label>
+                            <div class="style-options">
+                                <div class="style-radio">
+                                    <input type="radio" name="style-mode" id="style-light" checked>
+                                    <label for="style-light">Claro</label>
+                                </div>
+                                <div class="style-radio">
+                                    <input type="radio" name="style-mode" id="style-dark">
+                                    <label for="style-dark">Escuro</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="field-wrapper">
+                            <label>Foto de capa</label>
+                            <div class="cover-photo-upload">
+                                <button type="button" class="select-photo-btn">Selecionar</button>
+                                <p>Nenhum arquivo selecionado</p>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+
 </body>
 </html>
