field dados para contato

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <textarea name="description" id="description" placeholder="Escreva sobre os detalhes do evento"></textarea>
                     </div>
                 </fieldset>
-                
+
                 <fieldset class="personalizacao">
                     <legend>Personalização</legend>
                     <div class="field-wrapper">
@@ -210,6 +210,26 @@
                                 <button type="button" class="select-photo-btn">Selecionar</button>
                                 <p>Nenhum arquivo selecionado</p>
                             </div>
+                        </div>
+                    </div>
+                </fieldset>
+                
+                <fieldset class="contato-info">
+                    <legend>Dados para contato</legend>
+                    <div class="field-wrapper">
+                        <label for="name">Nome</label>
+                        <input type="text" name="name" id="name" placeholder="Nome completo">
+                    </div>
+                    <span class="required-field">Campo obrigatório</span>
+
+                    <div class="contact-grid">
+                        <div class="field-wrapper">
+                            <label for="email">E-mail</label>
+                            <input type="email" name="email" id="email" placeholder="exemplo@email.com">
+                        </div>
+                        <div class="field-wrapper">
+                            <label for="phone">Telefone</label>
+                            <input type="tel" name="phone" id="phone" placeholder="(99) 99999-9999">
                         </div>
                     </div>
                 </fieldset>
