politica de privacidade

--- a/index.html
+++ b/index.html
@@ -234,5 +234,25 @@
                     </div>
                 </fieldset>
 
+                    <div class="terms-and-conditions">
+                    <div class="checkbox-option">
+                        <input type="checkbox" id="agree-terms" checked>
+                        <label for="agree-terms">Li e concordo com os <span>Termos e Condições</span> e com a <span>Política de Privacidade</span></label>
+                    </div>
+                    <div class="checkbox-option">
+                        <input type="checkbox" id="receive-updates">
+                        <label for="receive-updates">Aceito receber atualizações e promoções por e-mail</label>
+                    </div>
+                    <div class="checkbox-option">
+                        <input type="checkbox" id="receive-sms">
+                        <label for="receive-sms">Aceito receber atualizações e promoções por SMS</label>
+                    </div>
+                </div>
+                <div class="btn">
+                    <button type="submit" class="submit-btn">Gerar convite</button>
+                </div>
+            </form>
+        </main>
+    </div>
 </body>
 </html>
