estilizando layout e aside

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <aside class="aside-container">
             <div class="logo-container">
                 <div class="logo">
+                    <img src="assets/Logo.svg" alt="confete">
                     <h1>Festivite</h1>
                     <p>Crie um convite digital para o seu evento</p>
                 </div>
